Bedrock to About page

--- a/about-stoneage.html
+++ b/about-stoneage.html
@@ -29,10 +29,119 @@ master-slider: yes
       <a href="/rentals">See StoneAge Tool Rentals</a></p>
       <p class="point"><span>Want to work with us?</span><br/>
       <a href="/jobs">Check Our Career Postings</a></p>
-      <a href="https://www.certifiedeo.com/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-certifiedeo.png" alt="Certified EO"></a>
+<!--      <a href="https://www.certifiedeo.com/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-certifiedeo.png" alt="Certified EO"></a>-->
     </div>
   </aside>
 </section>
+
+<!-- Bedrock -->
+<div id="staffCarousel" class="padding-tb-30">
+<section class="related fluid-container margin-bottom-60">
+  <!-- Staff slider -->
+  <div class="row">     
+    <div id="owl-culture" class="owl-carousel owl-theme staff-carousel">
+      <div class="item">
+        <img class="img-responsive" src="/assets/img/about-us/2016_07_CleanHarbors_Visit_002_mod.jpg" alt="StoneAge waterblast culture">
+      </div>
+      <div class="item">
+        <img class="img-responsive" src="/assets/img/about-us/2016_12_Striker_Build_mod.jpg" alt="StoneAge waterblast culture">
+      </div>
+      <div class="item">
+        <img class="img-responsive" src="/assets/img/about-us/IMG_9600.jpg" alt="StoneAge waterblast culture">
+      </div>
+      <div class="item">
+        <img class="img-responsive" src="/assets/img/about-us/2016_Canard_Visit_001_mod.jpg" alt="StoneAge waterblast culture">
+      </div>
+      <div class="item">
+        <img class="img-responsive" src="/assets/img/about-us/Natalie_002.jpg" alt="StoneAge waterblast culture">
+      </div>
+      <div class="item">
+        <img class="img-responsive" src="/assets/img/about-us/2017_Aquajet_Kjell_3L_mod.jpg" alt="StoneAge waterblast culture">
+      </div>
+      <div class="item">
+        <img class="img-responsive" src="/assets/img/about-us/IMG_2765_mod.jpg" alt="StoneAge waterblast culture">
+      </div>
+      <div class="item">
+        <img class="img-responsive" src="/assets/img/about-us/2017_IVS_WVA_Demo.jpg" alt="StoneAge waterblast culture">
+      </div>
+      <div class="item">
+        <img class="img-responsive" src="/assets/img/about-us/IMG_9606.jpg" alt="StoneAge waterblast culture">
+      </div>
+      <div class="item">
+        <img class="img-responsive" src="/assets/img/about-us/IMG_9521.jpg" alt="StoneAge waterblast culture">
+      </div>
+      <div class="item">
+        <img class="img-responsive" src="/assets/img/about-us/IMG_9580.jpg" alt="StoneAge waterblast culture">
+      </div>
+      <div class="item">
+        <img class="img-responsive" src="/assets/img/about-us/IMG_9806.jpg" alt="StoneAge waterblast culture">
+      </div>
+      <div class="item">
+        <img class="img-responsive" src="/assets/img/about-us/Intergallactic-Spellabration.jpg" alt="StoneAge waterblast culture">
+      </div>
+      <div class="item">
+        <img class="img-responsive" src="/assets/img/about-us/IMG_9663.jpg" alt="StoneAge waterblast culture">
+      </div>
+      <div class="item">
+        <img class="img-responsive" src="/assets/img/about-us/qualitycontrol_employee_photo.jpg" alt="StoneAge waterblast culture">
+      </div>
+      <div class="item">
+        <img class="img-responsive" src="/assets/img/about-us/SAE_Trailer_05.jpg" alt="StoneAge waterblast culture">
+      </div>
+      <div class="item">
+        <img class="img-responsive" src="/assets/img/about-us/Scotland_Exxon_Trailer.jpg" alt="StoneAge waterblast culture">
+      </div>
+    </div>    
+  </div>
+  <!-- End Staff slider -->
+
+  <!-- StoneAge Bedrock -->
+  <div class="fluid-container" style="background:#d9d5d2;">
+    <div class="container">
+      <h1 class="page-heading" style="padding:20px; font-weight:800; color:#fff; letter-spacing: 1.5px; font-size:36px;">The StoneAge Bedrock</h1>
+    </div>
+  </div>
+  
+  <div class="container padding-tb-30">
+    <h2 class="thin grey spaced margin-bottom-30" style="text-transform: none; font-size:24px; line-height:3.5rem;">Our relentless drive for innovation and remarkable customer service empowers our customers to succeed in cleaning the world. When our customers and the planet win, we win.</h2>
+    <h2 class="thin grey spaced margin-bottom-30" style="text-transform: none; font-size:24px;">Our mission is to inspire our customers to say, <em class="bold">"Why would I choose anyone but StoneAge?"</em></h2>
+  
+    <div class="section-heading margin-top-60">
+      <h2 style="color:#555;">Who We Are</h2>
+    </div>
+    <div class="row">
+      <div class="col-sm-5 text-left">
+        <h3>Product Leadership</h3>
+        <p>We live and breathe product leadership. We are driven to engineer high quality, industry-leading products that enable our customers to solve tough challenges. We continuously improve our work product and processes so we can better serve our customers' needs. We value and embrace creativity, always looking to lead innovation within our industry, while at the same time effectively managing the risks that are inherent with being technology leaders.</p>
+        <h3>Serving the Customer</h3>
+        <p>We understand that we exist because of our customers and we work tirelessly to earn and keep their trust. We make decisions and do our work in ways that inspire our customers to say, "Why would we choose anybody but StoneAge?"</p>
+        <h3>Personal Well Being </h3>
+        <p>We care about our health and happiness. We have a strong sense of work/life balance and believe that families come first. We believe that humor in the workplace is essential to our well-being and we encourage laughter, light-heartedness, and some self-deprecating humor. We help each other grow both personally and professionally. We are committed to providing exceptional benefits for our employees. We are committed to giving our team a safe place to work. </p>
+      </div>
+      <div class="col-sm-5 col-sm-offset-2 text-left">
+        <h3>OWN IT </h3>
+        <p>We are employee-owners and we embody the OWN IT mindset. We OWN IT by holding ourselves and each other accountable for being great teammates, doing good work, continuously improving, solving problems, and acting like owners. Each one of us takes full responsibility for driving the success of the company. We never say, "that's not my job". We own our actions and responses and graciously succeed or fail as a team. All of this allows us to <strong>DO BIG THINGS!</strong></p>
+        <h3>Driven</h3>
+        <p>We are driven to be market leaders and we do what it takes to serve our customers. We don't sit on our laurels; instead, we embrace and effect change. We are committed to excellence and challenging the status quo. We solve problems and deliver results.</p>
+        <h3>Agile</h3>
+        <p>We are flexible, adaptable and responsive. We believe our future depends on our ability to meet our customers' needs. We willingly engage with our teammates and our customers to quickly respond to changing needs.</p>
+      </div>
+    </div>
+    
+    <div class="section-heading margin-top-60">
+      <h2 style="color:#555;">Why We do it</h2>
+    </div>
+    <div class="row padding-tb-30">
+      <div class="container width-60">
+        <p>Given the qualities that define who we are, we believe that life is too short to strive for anything less than realizing our fullest potential. We use our intelligence, creativity, commitment, and teamwork to deliver great products and service to our customers, employees, and community.  </p>
+      </div>
+    </div>
+  
+  </div>
+  
+</section>
+</div>
+<!-- End Bedrock -->
 
 <!-- Affiliations -->
 <div id="wordCarousel" class="padding-tb-30">
