Add new bedrock plus misc updates

--- a/about-stoneage.html
+++ b/about-stoneage.html
@@ -23,6 +23,8 @@ master-slider: yes
   <aside class="col-sm-3 col-sm-offset-2 padding-tb-30 cta">
     <a href="waterblast-automation/autobox-abx-2l.html"><img src="assets/img/product/abx-2l-04.jpg" class="img-responsive"></a>
     <div class="padding-tb-60 padding-left-60">
+      <p class="point"><span>What's Our Mission?</span><br/>
+      <a href="#bedrock">Read the StoneAge Bedrock</a></p>
       <p class="point"><span>Need help with a job?</span><br/>
       <a href="/contact">Contact Our Team of Experts</a></p>
       <p class="point"><span>Need equipment fast?</span><br/>
@@ -35,6 +37,7 @@ master-slider: yes
 </section>
 
 <!-- Bedrock -->
+<a name="bedrock">&nbsp;</a>
 <div id="staffCarousel" class="padding-tb-30">
 <section class="related fluid-container margin-bottom-60">
   <!-- Staff slider -->
