--- a/careers.html
+++ b/careers.html
@@ -16,9 +16,10 @@ permalink: /jobs
   <div class="container padding-40-60">
     <div class="row">
       <div class="col-sm-6">
-      <h1 class="thin grey spaced margin-bottom-30"><em>StoneAge is 100% dedicated to customer service.</em></h1>
-      <p>We are known for employing the best people in the industry, and every employee is a member of our customer service team.</p>
-      <p>At StoneAge, each department views not only those who buy our products as customers, but each employee as a customer. We expect our employees to address issues in a timely manner, communicate effectively with both customers and each other, and look for positive ways to solve problems. StoneAge fosters a self-motivated environment where managing multiple priorities is essential.</p>
+        <h1 class="thin grey spaced margin-bottom-30"><em>StoneAge is 100% dedicated to customer service.</em></h1>
+        <p>We are known for employing the best people in the industry, and every employee is a member of our customer service team.</p>
+        <p>At StoneAge, each department views not only those who buy our products as customers, but each employee as a customer. We expect our employees to address issues in a timely manner, communicate effectively with both customers and each other, and look for positive ways to solve problems. StoneAge fosters a self-motivated environment where managing multiple priorities is essential.</p>
+        <p><a href="/about"><em>Read about our company history and mission.</em></a></p>
       </div>
       <div class="col-sm-6 padding-tb-30" style="padding-left:60px;">     
         
