--- a/downhole-tools/spincat-sc-287.html
+++ b/downhole-tools/spincat-sc-287.html
@@ -135,10 +135,8 @@ master-slider: yes
             </div>
             <aside class="col-sm-3 col-sm-offset-3 aside-box">
               <h3>Need Support?</h3>
-              <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
-              <p class="slab">Oil, Gas &amp; Renewables: <br><strong>Alan Charles</strong><br>
-              <strong>+1 (720) 219-0777</strong><br>
-              <strong><a href="mailto:alan.charles@stoneagetools.com">alan.charles@stoneagetools.com</a></strong></p>
+              <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+              <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
             </aside>
           </section>
 
@@ -159,10 +157,8 @@ master-slider: yes
             </div>
             <aside class="col-sm-3 col-sm-offset-1 aside-box">
               <h3>Need Support?</h3>
-              <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
-              <p class="slab">Oil, Gas &amp; Renewables: <br><strong>Alan Charles</strong><br>
-              <strong>+1 (720) 219-0777</strong><br>
-              <strong><a href="mailto:alan.charles@stoneagetools.com">alan.charles@stoneagetools.com</a></strong></p>
+              <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+              <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
             </aside>
           </section>
 
