--- a/manuals.html
+++ b/manuals.html
@@ -835,7 +835,7 @@ permalink: /manuals
                 <td>TR-100</td>
                 <td>TORUS<br>3D Tank/vessel cleaning</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/TR-100_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
-                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_TR.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
             </tbody>
           </table>
