--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@ landing: yes
 <!-- masterslider -->
 <div class="master-slider ms-skin-default" id="homeslider">
   
-  <!-- new slide
+  <!-- new slide -->
   <div class="ms-slide">
-    <img src="/assets/img/features/bg_red.jpg" data-src="/assets/img/features/bg_red.jpg" alt="lorem ipsum dolor sit"/>  
+    <img src="/assets/img/features/bg_purple_wwett18.jpg" data-src="/assets/img/features/bg_purple_wwett18.jpg" alt="StoneAge waterblast tools background"/>  
 
+<!--
     <div class="ms-layer feature-h1" style="" 
       data-effect="t(true,n,-60,n,n,n,n,n,n,n,n,n,n,n,n)" 
       data-duration="2200" 
@@ -23,8 +24,9 @@ landing: yes
       data-offset-x="150" 
       data-offset-y="-83" 
       data-origin="ml" 
-      data-position="normal">Happy<br>Holidays!
+      data-position="normal">Visit Booth #5124
     </div>
+-->
 
     <div class="ms-layer" style="width:280px;"
       data-effect="t(true,n,40,n,n,n,n,n,n,n,n,n,n,n,n)" 
@@ -35,7 +37,7 @@ landing: yes
       data-offset-y="15" 
       data-origin="ml" 
       data-position="normal"   
-      data-masked="true">Be sure to take a look at our holiday schedule when planning your orders
+      data-masked="true">February 21-24, 2018<br>Indiana Convention Center<br>Indianapolis, IN
     </div>
 
     <div class="ms-layer feature-h2" style="width:328px;"   
@@ -44,13 +46,13 @@ landing: yes
       data-delay="1200" 
       data-ease="easeOutQuint"                
       data-offset-x="150" 
-      data-offset-y="55" 
+      data-offset-y="-60" 
       data-origin="ml" 
       data-position="normal">
-      Place your orders by Wednesday!
+      The largest annual trade show for the wastewater industry in the U.S.
     </div>
 
-    <a href="http://news.stoneagetools.com/2017-holiday-schedule" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
+    <a href="http://info.stoneagetools.com/wwett-2018" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
        data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
        data-duration="2400" 
        data-delay="1400" 
@@ -62,6 +64,7 @@ landing: yes
        data-position="normal">More Info
     </a>
 
+<!--
     <img  class="ms-layer" src="/assets/img/features/holidays-2017.png" 
          data-src="/assets/img/features/holidays-2017.png" alt="" style=""  
          data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   
@@ -72,21 +75,22 @@ landing: yes
          data-offset-y="-35" 
          data-origin="mr" 
          data-position="normal" />
+-->
 
-  <img class="ms-layer" src="/assets/img/features/thxgiving-2017.png" 
-       data-src="/assets/img/features/wjta-2017-text.png" alt="" style=""  
+  <img class="ms-layer" src="/assets/img/features/home-wwett18-exhibitor-logo.png" 
+       data-src="/assets/img/features/home-wwett18-exhibitor-logo.png" alt="" style=""  
        data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   
        data-ease="easeOutQuint"       
        data-parallax="90" 
        data-type="image"          
-       data-offset-x="30" 
-       data-offset-y="0" 
+       data-offset-x="0" 
+       data-offset-y="-15" 
        data-origin="mr" 
        data-position="normal"
      />
 
 
-  </div> end of slide -->
+  </div> <!-- end of slide -->
   
   <!-- new slide -->
   <div class="ms-slide">
@@ -392,9 +396,9 @@ landing: yes
 -->
     
     <div class="row" style="margin-top:15px;">
-      <a href="https://www.wwettshow.com/en/home.html" target="_blank"><img src="/assets/img/thumb/upcoming-events-wwett2018.jpg" class="img-responsive"/ alt="Visit ADIPEC 2017"></a>
+      <a href="http://info.stoneagetools.com/wwett-2018"><img src="/assets/img/thumb/upcoming-events-wwett2018.jpg" class="img-responsive"/ alt="Visit ADIPEC 2017"></a>
       <div class="caption text-center">
-        <h4><a href="https://www.wwettshow.com/en/home.html" target="_blank">WWETT Show</a><br>
+        <h4><a href="http://info.stoneagetools.com/wwett-2018">WWETT Show</a><br>
           <span class="small">Water &amp; Wastewater Equipment, Treatment &amp; Transport<br><strong>February 21-24<br/>
           Indianapolis, IN</strong></span></h4>
       </div>
@@ -409,7 +413,11 @@ landing: yes
       <h2>Latest News</h2>
     </div>
     <ul class="home-news list-unstyled">
-      
+      <li>
+        <h4><a href="http://news.stoneagetools.com/whr-hybrid-switcher-case-study-pd">Case Study: WHR Hybrid Switcher</a></h4>
+        <p>The Warthog WHR Hybrid Switcher handles long distances, inclines, and excessive buildup.<br>
+        <small><i class="fa fa-file-text-o"></i> Case Study, February 7</small></p>
+      </li>      
       <li>
         <h4><a href="http://news.stoneagetools.com/autostroke-ast-200-v2">New AutoStroke AST-200-V2 Available</a></h4>
         <p>AutoStroke accessory automatically clears plugged exchanger tubes without operator intervention.<br>
@@ -428,11 +436,6 @@ landing: yes
       <li>
         <h4><a href="http://news.stoneagetools.com/free-sewer-tools-for-houston">Warthogs for Houston</a></h4>
         <p>StoneAge is donating over $100K in Warthog sewer tools to aid Houston and surrounding communities with cleanup efforts after hurricane Harvey.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, September 2017</small></p>
-      </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/joins-certified-eo">StoneAge Certified Employee-Owned</a></h4>
-        <p>StoneAge is very pleased to announce that it has become a founding member of Certified EO, a new certification program for employee-owned companies.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, September 2017</small></p>
       </li>
       <li><a href="http://news.stoneagetools.com/">More news here</a></li>
