--- a/rotary-waterblast-tools/sg-swivel.html
+++ b/rotary-waterblast-tools/sg-swivel.html
@@ -383,7 +383,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">3/4 NPT</td>
+                      <td colspan="2">3/4 MP</td>
                     </tr>
                     <tr>
                       <th>Shaft Connection</th>
